<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eduffer.Startup.CreateAccountPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/side_nav_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/crete_round"
                    android:text="@string/createaccount"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="?android:textColorPrimary"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="25dp"
            android:innerRadius="0dp"
            android:shape="ring"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_header_desc"
                app:srcCompat="@drawable/studentlogo">

            </ImageView>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/createaccount_name"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_round_corners"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textCapWords"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/createaccount_dob"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/dob"
            android:maxLength="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_name" />

        <EditText
            android:id="@+id/createaccount_age"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_name" />

        <EditText
            android:id="@+id/createaccount_universityname"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/university_name"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_dob" />

        <EditText
            android:id="@+id/createaccount_emiailid"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/emailid"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_universityname" />

        <EditText
            android:id="@+id/createaccount_mobno"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/mobno"
            android:inputType="phone"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_emiailid" />

        <EditText
            android:id="@+id/createaccount_country"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/country"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_mobno" />

        <EditText
            android:id="@+id/createaccount_state"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/state"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_country" />

        <EditText
            android:id="@+id/createaccount_city"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/city"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_state" />

        <EditText
            android:id="@+id/createaccount_pincode"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corners"
            android:ems="10"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/pincode"
            android:inputType="number"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_city" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createaccount_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/round_button"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_pincode" />

        <ProgressBar
            android:id="@+id/createaccount_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount_pincode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>