<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eduffer.NavigationMenu.Dashboard.TabLayout.UniversityInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/universityinfo_img"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_school_24" />


    <EditText
        android:id="@+id/universityinfo_univeritysname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:enabled="false"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/crete_round"
        android:background="@null"
        android:hint="@string/university_name"
        android:inputType="textCapWords"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universityinfo_img" />

    <EditText
        android:id="@+id/universityinfo_dept"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:enabled="false"
        android:fontFamily="@font/crete_round"
        android:hint="@string/dept"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universityinfo_univeritysname" />

    <EditText
        android:id="@+id/universityinfo_year"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:fontFamily="@font/crete_round"
        android:hint="@string/year"
        android:gravity="center"
        android:maxLength="1"
        android:enabled="false"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universityinfo_dept" />

        <EditText
            android:id="@+id/universityinfo_emailid"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:enabled="false"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/emailid"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_year" />

        <EditText
            android:id="@+id/universityinfo_regno"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:enabled="false"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/reg_no"
            android:inputType="textPersonName"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_emailid" />

        <EditText
            android:id="@+id/universityinfo_country"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:enabled="false"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/country"
            android:inputType="textCapWords"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_regno" />

        <EditText
            android:id="@+id/universityinfo_state"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:enabled="false"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:hint="@string/state"
            android:inputType="textCapWords"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_country" />

    <EditText
        android:id="@+id/universityinfo_city"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:inputType="textCapWords"
        android:hint="@string/city"
        android:fontFamily="@font/crete_round"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universityinfo_state" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/universityinfo_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/edit"
            android:fontFamily="@font/crete_round"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_city" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/universityinfo_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:fontFamily="@font/crete_round"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_city" />

        <ProgressBar
            android:id="@+id/progressBarLaoding"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/universityinfo_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityinfo_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>